# iceberg-explainer

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: iceberg_service.py  main.py  metadata.py  parquet_reader.py
docker/: README.md  docker-compose.yml  pyproject.toml
docker/static/: app.js  index.html  rowDefaults.js  styles.css
static/: styles.css
wasm/: README.md  index.html  package-lock.json  package.json  test-explorer.mjs  vite.config.ts
wasm/src/: app.ts  explainer.ts  memoryStore.ts  metadata.ts  parquet.ts  style.css
web/: README.md  index.html  package.json
web/src/: advancedMode.ts  app.ts  compare.ts  explainer.ts  json.ts  main.ts  operationLog.ts  parquet.ts  readCost.ts  rowDefaults.ts  rowLocations.ts  style.css  tableConfig.ts
