[project]
name = "iceberg-explainer"
version = "0.1.0"
description = "Interactive Apache Iceberg metadata structure explainer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyiceberg[sql-sqlite,pyarrow,s3fs]>=0.7.0",
    "boto3>=1.35.0",
    "fastavro>=1.9.0",
    "deepdiff>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
